Fix funky sub-menu overlapping

--- a/gmmn.css
+++ b/gmmn.css
@@ -33,6 +33,9 @@
     padding: 2rem;
     font-size: 1.4rem;
   }
+  .site-header .sub-menu .sub-menu {
+    margin-top: 0;
+  }
   .site-header .sub-menu .sub-menu-toggle {
     padding: 1.8rem 2rem;
   }
